--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Мой Бизнес</title>
-    <link rel="icon" type="image/svg+xml" href="/data/ui/actionbar/icon.svg">
+    <link rel="icon" type="image/svg+xml" href="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg">
     <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
     <style>
       :root {
@@ -14,9 +14,15 @@
       body {
         margin: 0;
         font-family: Roboto, sans-serif;
-        background: url('/assets/backround/dark.png') no-repeat center center fixed;
+        background: url('https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/assets/backround/dark.png') no-repeat center center fixed;
         background-size: cover;
+        color: #fff;
         transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      body.light {
+        background: #ffffff;
+        color: #000;
       }
 
       md-top-app-bar {
@@ -30,6 +36,17 @@
         align-items: center;
         justify-content: space-between;
         padding: 0 16px;
+      }
+
+      .nav-left {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .nav-left img {
+        height: 28px;
+        width: 28px;
       }
 
       .nav-buttons {
@@ -62,8 +79,8 @@
       }
 
       .theme-toggle img {
-        width: 24px;
-        height: 24px;
+        width: 28px;
+        height: 28px;
       }
 
       html {
@@ -74,15 +91,18 @@
   <body>
     <md-top-app-bar>
       <div slot="title" class="toolbar-content">
-        <div class="nav-buttons">
-          <md-text-button onclick="scrollToCard('glasses')">Бокалы</md-text-button>
-          <md-text-button onclick="scrollToCard('bottles')">Бутылки</md-text-button>
-          <md-text-button onclick="scrollToCard('cake')">Аксессуары для торта</md-text-button>
-          <md-text-button onclick="scrollToCard('rings')">Шкатулки для колец</md-text-button>
-          <md-text-button onclick="scrollToCard('envelopes')">Коробки для конвертов</md-text-button>
+        <div class="nav-left">
+          <img src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg" alt="Логотип" />
+          <div class="nav-buttons">
+            <md-text-button onclick="scrollToCard('glasses')">Бокалы</md-text-button>
+            <md-text-button onclick="scrollToCard('bottles')">Бутылки</md-text-button>
+            <md-text-button onclick="scrollToCard('cake')">Аксессуары для торта</md-text-button>
+            <md-text-button onclick="scrollToCard('rings')">Шкатулки для колец</md-text-button>
+            <md-text-button onclick="scrollToCard('envelopes')">Коробки для конвертов</md-text-button>
+          </div>
         </div>
         <button class="theme-toggle" onclick="toggleTheme()">
-          <img id="theme-icon" src="/data/ui/actionbar/themeswitcher/light.svg" alt="Переключить тему" />
+          <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Переключить тему" />
         </button>
       </div>
     </md-top-app-bar>
@@ -96,20 +116,20 @@
     </div>
 
     <script>
-      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
       const themeIcon = document.getElementById('theme-icon');
 
-      function applyTheme(dark) {
-        document.documentElement.classList.toggle('dark-theme', dark);
-        themeIcon.src = dark
-          ? '/data/ui/actionbar/themeswitcher/dark.svg'
-          : '/data/ui/actionbar/themeswitcher/light.svg';
+      function applyTheme(light) {
+        document.body.classList.toggle('light', light);
+        themeIcon.src = light
+          ? 'https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_on.svg'
+          : 'https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg';
       }
 
       function toggleTheme() {
-        const isDark = document.documentElement.classList.toggle('dark-theme');
-        localStorage.setItem('theme', isDark ? 'dark' : 'light');
-        applyTheme(isDark);
+        const isLight = !document.body.classList.contains('light');
+        document.body.classList.toggle('light', isLight);
+        localStorage.setItem('theme', isLight ? 'light' : 'dark');
+        applyTheme(isLight);
       }
 
       function scrollToCard(id) {
@@ -118,8 +138,9 @@
 
       (function initTheme() {
         const saved = localStorage.getItem('theme');
-        const useDark = saved === 'dark' || (!saved && prefersDark.matches);
-        applyTheme(useDark);
+        const useLight = saved === 'light';
+        document.body.classList.toggle('light', useLight);
+        applyTheme(useLight);
       })();
     </script>
   </body>
