--- a/index.html
+++ b/index.html
@@ -1,178 +1,257 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Мой Бизнес</title>
-    <link rel="icon" type="image/svg+xml" href="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg" />
-    <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
-    <style>
-      :root {
-        color-scheme: light dark;
-      }
-
-      body {
-        margin: 0;
-        font-family: Roboto, sans-serif;
-        background: url('https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/assets/backround/dark.png') no-repeat center center fixed;
-        background-size: cover;
-        color: #fff;
-        transition: background-color 0.3s ease, color 0.3s ease;
-      }
-
-      body.light {
-        background: #ffffff;
-        color: #000;
-      }
-
-      md-top-app-bar {
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-      }
-
-      .toolbar-content {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 16px;
-      }
-
-      .nav-left {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-      }
-
-      .nav-left img {
-        height: 28px;
-        width: 28px;
-      }
-
-      .nav-buttons {
-        display: flex;
-        gap: 8px;
-      }
-
-      .nav-buttons md-text-button {
-        --md-sys-color-primary: #90caf9;
-      }
-
-      .content {
-        padding: 24px;
-        max-width: 900px;
-        margin: 0 auto;
-      }
-
-      md-elevated-card {
-        width: 100%;
-        margin-bottom: 40px;
-        display: block;
-        padding: 16px;
-      }
-
-      .product-image {
-        width: 100%;
-        height: auto;
-        max-height: 200px;
-        object-fit: cover;
-        border-radius: 8px;
-      }
-
-      .card-content {
-        margin-top: 12px;
-      }
-
-      .card-content h2 {
-        margin: 0 0 8px;
-        font-size: 20px;
-      }
-
-      .theme-toggle {
-        cursor: pointer;
-        background: none;
-        border: none;
-        padding: 4px;
-      }
-
-      .theme-toggle img {
-        width: 28px;
-        height: 28px;
-      }
-
-      html {
-        scroll-behavior: smooth;
-      }
-    </style>
-  </head>
-  <body>
-    <md-top-app-bar>
-      <div slot="title" class="toolbar-content">
-        <div class="nav-left">
-          <img src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg" alt="Логотип" />
-          <div class="nav-buttons">
-            <md-text-button onclick="scrollToCard('glasses')">Бокалы</md-text-button>
-            <md-text-button onclick="scrollToCard('bottles')">Бутылки</md-text-button>
-            <md-text-button onclick="scrollToCard('cake')">Аксессуары для торта</md-text-button>
-            <md-text-button onclick="scrollToCard('rings')">Шкатулки для колец</md-text-button>
-            <md-text-button onclick="scrollToCard('envelopes')">Коробки для конвертов</md-text-button>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Мой Бизнес</title>
+  <link rel="icon" type="image/svg+xml" href="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
+  <style>
+    :root {
+      color-scheme: light dark;
+    }
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: url('https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/assets/backround/dark.png') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+    body.light {
+      background: #ffffff;
+      color: #000;
+    }
+    md-top-app-bar {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .toolbar-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      padding: 0 16px;
+    }
+    .nav-left {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+    .nav-left img {
+      height: 28px;
+      width: 28px;
+    }
+    .nav-buttons {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+    .content {
+      padding: 24px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 16px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .card {
+      background: #2b2b2b;
+      border-radius: 8px;
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .card.light {
+      background: #f5f5f5;
+      color: #000;
+    }
+    .card img {
+      width: 100%;
+      border-radius: 4px;
+    }
+    .card .title, .card .desc, .card .price {
+      font-size: 14px;
+    }
+    .card .title {
+      font-weight: 500;
+    }
+    .theme-toggle {
+      cursor: pointer;
+      background: none;
+      border: none;
+      padding: 4px;
+    }
+    .theme-toggle img {
+      width: 28px;
+      height: 28px;
+    }
+    .popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+      display: none;
+    }
+    .popup-inner {
+      background: #fff;
+      color: #000;
+      border-radius: 8px;
+      padding: 20px;
+      min-width: 300px;
+    }
+    .popup-inner h3 {
+      margin-top: 0;
+    }
+    .popup-inner button {
+      display: block;
+      width: 100%;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <md-top-app-bar>
+    <div slot="title" class="toolbar-content">
+      <div class="nav-left">
+        <img src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg" alt="Логотип" />
+        <div class="nav-buttons">
+          <md-text-button>Бокалы</md-text-button>
+          <md-text-button>Бутылки</md-text-button>
+          <md-text-button>Аксессуары для торта</md-text-button>
+          <md-text-button>Шкатулки для колец</md-text-button>
+          <md-text-button>Коробки для конвертов</md-text-button>
         </div>
-        <button class="theme-toggle" onclick="toggleTheme()">
-          <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Переключить тему" />
-        </button>
       </div>
-    </md-top-app-bar>
-
-    <div class="content">
-      <md-elevated-card id="glasses">
-        <img class="product-image" src="https://via.placeholder.com/800x200?text=%D0%91%D0%BE%D0%BA%D0%B0%D0%BB%D1%8B" alt="Бокалы" />
-        <div class="card-content">
-          <h2>Бокалы "Классика"</h2>
-          <md-filled-button>Купить</md-filled-button>
-        </div>
-      </md-elevated-card>
-
-      <md-elevated-card id="bottles">
-        <img class="product-image" src="https://via.placeholder.com/800x200?text=%D0%91%D1%83%D1%82%D1%8B%D0%BB%D0%BA%D0%B8" alt="Бутылки" />
-        <div class="card-content">
-          <h2>Свадебная бутылка</h2>
-          <md-filled-button>Купить</md-filled-button>
-        </div>
-      </md-elevated-card>
-
-      <md-elevated-card id="cake"></md-elevated-card>
-      <md-elevated-card id="rings"></md-elevated-card>
-      <md-elevated-card id="envelopes"></md-elevated-card>
+      <button class="theme-toggle" onclick="toggleTheme()">
+        <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Тема" />
+      </button>
     </div>
+  </md-top-app-bar>
 
-    <script>
-      const themeIcon = document.getElementById('theme-icon');
+  <div class="content" id="product-grid"></div>
 
-      function applyTheme(light) {
-        document.body.classList.toggle('light', light);
-        themeIcon.src = light
-          ? 'https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_on.svg'
-          : 'https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg';
+  <div class="popup" id="messenger-popup">
+    <div class="popup-inner">
+      <h3>Выберите мессенджер:</h3>
+      <button onclick="openLink('whatsapp')">WhatsApp</button>
+      <button onclick="openLink('telegram')">Telegram</button>
+      <button onclick="openLink('facebook')">Facebook</button>
+      <button onclick="openLink('instagram')">Instagram</button>
+      <button onclick="closePopup()">Отмена</button>
+    </div>
+  </div>
+
+  <script>
+    let currentLinks = {};
+
+    function parseStyledText(text) {
+      return text
+        .replace(/§[0-9a-f]/gi, match => `<span class="mc-${match[1]}">`)
+        .replace(/§l/g, '<strong>')
+        .replace(/§o/g, '<em>')
+        .replace(/§m/g, '<s>')
+        .replace(/§n/g, '<u>')
+        .replace(/§r/g, '</span></strong></em><s></s><u></u>');
+    }
+
+    function renderCard(data) {
+      const card = document.createElement('div');
+      card.className = 'card';
+
+      const pics = data.picurls.split(';').map(p => p.includes(':') ? p.split(':')[1] : p);
+      pics.forEach(url => {
+        const img = document.createElement('img');
+        img.src = url;
+        card.appendChild(img);
+      });
+
+      const title = document.createElement('div');
+      title.className = 'title';
+      title.innerHTML = parseStyledText(data.name);
+      card.appendChild(title);
+
+      const desc = document.createElement('div');
+      desc.className = 'desc';
+      desc.innerHTML = parseStyledText(data.description);
+      card.appendChild(desc);
+
+      const price = document.createElement('div');
+      price.className = 'price';
+      price.innerHTML = parseStyledText(data.price);
+      card.appendChild(price);
+
+      const buyBtn = document.createElement('md-filled-button');
+      buyBtn.textContent = 'КУПИТЬ';
+      buyBtn.onclick = () => {
+        currentLinks = {
+          whatsapp: data.whatsapp,
+          telegram: data.telegram,
+          instagram: data.instagram,
+          facebook: data.facebook
+        };
+        document.getElementById('messenger-popup').style.display = 'flex';
+      };
+      card.appendChild(buyBtn);
+
+      return card;
+    }
+
+    function closePopup() {
+      document.getElementById('messenger-popup').style.display = 'none';
+    }
+
+    function openLink(platform) {
+      if (currentLinks[platform]) {
+        window.open(currentLinks[platform], '_blank');
       }
+      closePopup();
+    }
 
-      function toggleTheme() {
-        const isLight = !document.body.classList.contains('light');
-        document.body.classList.toggle('light', isLight);
-        localStorage.setItem('theme', isLight ? 'light' : 'dark');
-        applyTheme(isLight);
-      }
+    fetch('list.txt')
+      .then(res => res.text())
+      .then(txt => {
+        const products = txt.split(/\n(?=\d+:)/).map(block => {
+          const item = {};
+          block.split('\n').forEach(line => {
+            const match = line.match(/^(\w+)=\"(.+?)\"$/);
+            if (match) item[match[1]] = match[2];
+          });
+          return item;
+        });
+        const grid = document.getElementById('product-grid');
+        products.forEach(p => grid.appendChild(renderCard(p)));
+      });
 
-      function scrollToCard(id) {
-        document.getElementById(id)?.scrollIntoView({ behavior: 'smooth' });
-      }
-
-      (function initTheme() {
-        const saved = localStorage.getItem('theme');
-        const useLight = saved === 'light';
-        document.body.classList.toggle('light', useLight);
-        applyTheme(useLight);
-      })();
-    </script>
-  </body>
+    const themeIcon = document.getElementById('theme-icon');
+    function applyTheme(light) {
+      document.body.classList.toggle('light', light);
+      themeIcon.src = light
+        ? 'https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_on.svg'
+        : 'https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg';
+    }
+    function toggleTheme() {
+      const isLight = !document.body.classList.contains('light');
+      document.body.classList.toggle('light', isLight);
+      localStorage.setItem('theme', isLight ? 'light' : 'dark');
+      applyTheme(isLight);
+    }
+    (function initTheme() {
+      const saved = localStorage.getItem('theme');
+      const useLight = saved === 'light';
+      document.body.classList.toggle('light', useLight);
+      applyTheme(useLight);
+    })();
+  </script>
+</body>
 </html>
