--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <md-top-app-bar>
     <div slot="title" class="toolbar-content">
       <div class="nav-left">
-        <img src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.svg" alt="Логотип" />
+        <img src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.png" alt="Логотип" />
         <div class="nav-buttons">
           <md-text-button>Бокалы</md-text-button>
           <md-text-button>Бутылки</md-text-button>
