--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!-- Полный HTML-файл с правками -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Мой Бизнес</title>
-  <link rel="icon" type="image/svg+xml" href="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.png" />
+  <link rel="icon" type="image/png" href="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <script type="module" src="https://unpkg.com/@material/web/all.js?module"></script>
   <style>
@@ -14,19 +15,28 @@
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: url('https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/assets/backround/dark.png') no-repeat center center fixed;
+      background-color: #121212;
+      background-image: url('https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/assets/backround/dark.png');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
       background-size: cover;
       color: #fff;
       transition: background-color 0.3s ease, color 0.3s ease;
     }
     body.light {
-      background: #ffffff;
+      background-color: #ffffff;
+      background-image: none;
       color: #000;
     }
     md-top-app-bar {
       position: sticky;
       top: 0;
       z-index: 1000;
+      background-color: #2b2b2b;
+    }
+    body.light md-top-app-bar {
+      background-color: #f5f5f5;
     }
     .toolbar-content {
       display: flex;
@@ -40,10 +50,6 @@
       align-items: center;
       gap: 8px;
       flex-wrap: wrap;
-    }
-    .nav-left img {
-      height: 28px;
-      width: 28px;
     }
     .nav-buttons {
       display: flex;
@@ -65,8 +71,9 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
+      transition: background 0.3s ease;
     }
-    .card.light {
+    body.light .card {
       background: #f5f5f5;
       color: #000;
     }
@@ -124,7 +131,6 @@
   <md-top-app-bar>
     <div slot="title" class="toolbar-content">
       <div class="nav-left">
-        <img src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/icon.png" alt="Логотип" />
         <div class="nav-buttons">
           <md-text-button>Бокалы</md-text-button>
           <md-text-button>Бутылки</md-text-button>
@@ -133,9 +139,12 @@
           <md-text-button>Коробки для конвертов</md-text-button>
         </div>
       </div>
-      <button class="theme-toggle" onclick="toggleTheme()">
-        <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Тема" />
-      </button>
+      <div style="display: flex; align-items: center; gap: 8px;">
+        <md-text-button onclick="location.href='https://web.triworld.xyz/about'">О нас</md-text-button>
+        <button class="theme-toggle" onclick="toggleTheme()">
+          <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Тема" />
+        </button>
+      </div>
     </div>
   </md-top-app-bar>
 
@@ -221,7 +230,7 @@
     fetch('list.txt')
       .then(res => res.text())
       .then(txt => {
-        const products = txt.split(/\n(?=\d+:)/).map(block => {
+        const products = txt.trim().split(/\n(?=\d+:)/).map(block => {
           const item = {};
           block.split('\n').forEach(line => {
             const match = line.match(/^(\w+)=\"(.+?)\"$/);
@@ -253,6 +262,5 @@
       applyTheme(useLight);
     })();
   </script>
-
 </body>
 </html>
