--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,7 +31,7 @@
     md-top-app-bar {
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 1001;
     }
     md-top-app-bar::before {
       content: "";
@@ -52,11 +53,6 @@
     .nav-left {
       display: flex;
       align-items: center;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-    .nav-buttons {
-      display: flex;
       gap: 8px;
       flex-wrap: wrap;
     }
@@ -114,19 +110,20 @@
   </style>
 </head>
 <body>
-  <md-top-app-bar>
-    <div slot="title" class="toolbar-content">
-      <div class="nav-left"></div>
-      <div style="display: flex; align-items: center; gap: 8px;">
-        <md-icon-button id="menu-button" aria-label="Меню">
-          <md-icon>menu</md-icon>
-        </md-icon-button>
-        <button class="theme-toggle" onclick="toggleTheme()">
-          <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Тема" />
-        </button>
-      </div>
+  <md-dialog id="messenger-popup">
+    <div slot="headline">Выберите мессенджер</div>
+    <div slot="content">
+      <md-text-button onclick="openLink('whatsapp')">WhatsApp</md-text-button>
+      <md-text-button onclick="openLink('telegram')">Telegram</md-text-button>
+      <md-text-button onclick="openLink('facebook')">Facebook</md-text-button>
+      <md-text-button onclick="openLink('instagram')">Instagram</md-text-button>
     </div>
-  </md-top-app-bar>  <md-drawer id="menu-drawer" type="modal">
+    <div slot="actions">
+      <md-text-button dialogAction="close">Отмена</md-text-button>
+    </div>
+  </md-dialog>
+
+  <md-modal-drawer id="drawer">
     <md-list>
       <md-list-item onclick="closeDrawer()">X (закрыть)</md-list-item>
       <md-subheader>|Свадьбы:|</md-subheader>
@@ -141,21 +138,30 @@
       <md-list-item onclick="location.href='/'">Главная</md-list-item>
       <md-list-item onclick="location.href='https://web.triworld.xyz/about'">О нас</md-list-item>
     </md-list>
-  </md-drawer>  <div class="content" id="product-grid"></div>  <md-dialog id="messenger-popup">
-    <div slot="headline">Выберите мессенджер</div>
-    <div slot="content">
-      <md-text-button onclick="openLink('whatsapp')">WhatsApp</md-text-button>
-      <md-text-button onclick="openLink('telegram')">Telegram</md-text-button>
-      <md-text-button onclick="openLink('facebook')">Facebook</md-text-button>
-      <md-text-button onclick="openLink('instagram')">Instagram</md-text-button>
+  </md-modal-drawer>
+
+  <md-top-app-bar>
+    <div slot="title" class="toolbar-content">
+      <div class="nav-left"></div>
+      <div style="display: flex; align-items: center; gap: 8px;">
+        <md-icon-button id="menu-button" aria-label="Меню">
+          <md-icon>menu</md-icon>
+        </md-icon-button>
+        <button class="theme-toggle" onclick="toggleTheme()">
+          <img id="theme-icon" src="https://web.triworld.xyz/3z5hf76g4q3znch923muc4z97823nmzx7892nv5bz7324znv5724zmc5789vuiq3c832c5b7n3n423328c5rz734823c45rzn89r/data/ui/actionbar/themeswitcher/toggle_off.svg" alt="Тема" />
+        </button>
+      </div>
     </div>
-    <div slot="actions">
-      <md-text-button dialogAction="close">Отмена</md-text-button>
-    </div>
-  </md-dialog>  <footer>
+  </md-top-app-bar>
+
+  <div class="content" id="product-grid"></div>
+
+  <footer>
     <a href="/datenschutz">Datenschutz</a>
     <a href="/impressum">Impressum</a>
-  </footer>  <script>
+  </footer>
+
+  <script>
     let currentLinks = {};
 
     function parseStyledText(text) {
@@ -217,14 +223,6 @@
       document.getElementById('messenger-popup').close();
     }
 
-    function closeDrawer() {
-      document.getElementById('menu-drawer').close();
-    }
-
-    document.getElementById('menu-button').addEventListener('click', () => {
-      document.getElementById('menu-drawer').show();
-    });
-
     fetch('list.txt')
       .then(res => res.text())
       .then(txt => {
@@ -259,5 +257,13 @@
       document.body.classList.toggle('light', useLight);
       applyTheme(useLight);
     })();
-  </script></body>
+
+    function closeDrawer() {
+      document.getElementById('drawer').close();
+    }
+    document.getElementById('menu-button').addEventListener('click', () => {
+      document.getElementById('drawer').show();
+    });
+  </script>
+</body>
 </html>
